# rosie-dead-reckoning

./: CMakeLists.txt  README.md  controller_params.yaml  dead_reckoning_params.yaml  package.xml
launch/: rosie_dead_reckoning.launch
src/: dead_reckoning_ekf.cpp  dead_reckoning_node.cpp  dead_reckoning_self.cpp
